-bug#0001105: add_graphs.php --list-snmp-values for all available host snmp-fields
-bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
-bug#0001182: Subdirectories are not secure and allow browsing
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: initialization of snmp_auth when using SNMP=NONE 
-documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
-feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
-feature#0001124: Devices/Host Templates - remove already associated objects from dropdown selector
-feature#0001123: Performance tweak by adding some indices
-feature#0001122: Propagate Host Template changes to related hosts
-feature#0001030: Lower limit and upper limit |query_*| variable support for Graph Templates
-feature#0001111: add remove-device.php cli script, replace numerical constants for permission handling by PERM_*
-feature#0001111: add remove-graph.php cli script
-feature#0000954: implement --alt-y-grid graph option
-feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
-feature: Support for new variables |host_ping_retries| and |host_max_oids|
-feature: Support changing the "Reindex Method" of associated data queries
-feature: Manage all Host Availability Options in each Host Template, derive Host options from those
-feature: Add Server Time to page headers, pay respect to user specific date/timeformats
-feature: add_device.php uses a host template like feature#0001122
-feature: Allow the enabling and disabling of a Data Source from the Data Source Edit form

0.8.7b
-bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
-bug#0001083: Small visual fix for Cacti in "View Cacti Log File"
-bug#0001089: Graph xport modification to increase default rows output
-bug#0001091: Poller incorrectly identifies unique hosts