@@ -6,7 +6,8 @@ Cacti CHANGELOG
 -bug#0001182: Subdirectories are not secure and allow browsing
 -bug: remove graph permissions if graph is removed
 -bug: remove host permissions if host is removed
--bug: initialization of snmp_auth when using SNMP=NONE 
+-bug: initialization of snmp_auth when using SNMP=NONE
+-bug: speed up add_graphs.php in most cases (still slow only if --input-fields is used) 
 -documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
 -feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
 -feature#0001124: Devices/Host Templates - remove already associated objects from dropdown selector
@@ -23,6 +24,7 @@ Cacti CHANGELOG
 -feature: Add Server Time to page headers, pay respect to user specific date/timeformats
 -feature: add_device.php uses a host template like feature#0001122
 -feature: Allow the enabling and disabling of a Data Source from the Data Source Edit form
+-feature: Rerun already associated SNMP Queries if any SNMP related field was changed during host edit
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
